feat: 业务模块扩展 + 代码规范修复 + Flyway迁移V101-V121
- 新增6个业务模块: approval/cost/edi/mrp/olap/quality/tpm
- 新增Flyway迁移V101-V121 (业务表+菜单+权限+i18n)
- 修复IDE警告: @MockitoBean替代@MockBean (Boot 3.4+)
- 修复IDE警告: permissionsPolicyHeader替代permissionsPolicy (Sec 6.4+)
- 移除未使用字段 (MaintenanceService.recordMapper)
- SourceController路径提取 (/libraries合并至类级@RequestMapping)
- 更新CODING_STANDARDS.md v1.3 + AGENTS.md
- 前端新增业务模块页面/API/i18n/路由